# dlib-align-faces

./: CMakeLists.txt  LICENSE  PITCHME.md  align_faces.cpp  align_faces.py  build.xml  face_chips.json  readme.md  train_shape_predictor_ex.cpp
libjpeg/: readme.md
libjpeg/windows_x86_64/lib/: libjpeg_a.lib
src/test/resources/: readme.md
